# build-tools

./: .gitattributes  .gitignore  README.md
.github/workflows/: k8s-microservice-release.yml  restricted-branch-check.yml
ansible/install-server/: README  playbook.yml
ansible/install-sgw/: README  inventory  playbook.yml
apple/: codesign_and_notarize.sh
apple/codesign/: codesignApple.sh  codesignApple_dmg.sh  codesignApple_server.sh  codesignApple_simple.sh
apple/notarization/: notarize-couchbase-server.sh  notarize_simple.sh
atlassian/confluence/: confluence_backup.py
atlassian/jira/: create_tools_ticket.py  customer_encountered_tickets.py  jira_issue_manager.py  requirements.txt
backups/golang/: download_all_go.sh
blackduck/: .gitignore  README.md  check-component-lic.py  do_scan.sh  get_alice.sh  get_android.sh  get_cbl.sh  get_mad-hatter.sh  get_madhatter.sh  get_operator.sh  get_spock.sh  get_vulcan.sh  get_watson.sh
blackduck/agent-catalog/: detect-config.json  get_source.sh  scan-config.json
blackduck/agentmemory/: get_source.sh  prune_source.sh
blackduck/agentmemory-sdk/: detect-config.json  get_source.sh  prune_source.sh  scan-config.json
blackduck/ai-gateway/: get_additional_source.sh
blackduck/capella-analytics/: detect-config.json  get_additional_source.sh  scan-environment.sh
blackduck/capella-data-studio/: detect-config.json  get_additional_source.sh  get_source.sh  (+1 more)
blackduck/jenkins/check-licences/: blackduck-check-licenses.sh  check-component-lic.py  pyproject.toml  requirements.txt
blackduck/jenkins/detect-scan/: add_subproject.py  bd_aliases.yaml  bdhelper.py  blackduck-detect-scan.sh  jenkins-entrypoint.sh  manual-manifest-requirements.txt  prune-from-manual-manifest  pyproject.toml  requirements.txt  run-scanner  update-manual-manifest  update-manual-manifest.py
blackduck/jenkins/generate-reports/: download-reports.py  generate-reports.sh  pyproject.toml  requirements.txt
blackduck/scripts/: create-maven-boms.py  exclude-pom-dependencies.py  exclude-unshipped-go-modules.py  flatten-project-version  flatten-project-version.py  pyproject.toml  requirements.txt
bsl/: jenkins_trigger.sh  update-bsl-for-manifest  update-bsl-for-repo
build-from-manifest/: Git.py  Manifest.py  build_from_manifest.py  manifest-cv  manifest-unchanged  manifest_util.py  props-for-manifest  rebuild_from_manifest  scan-manifests  toy_build_from_manifest  update_manifest_from_submodules
cbdeps/cbpy/verify-black-duck-manifest/: README.md  pyproject.toml  verify_black_duck_manifest.py
check_builds/: .gitignore  Dockerfile  MANIFEST.in  README.md  check_builds.ini  go  pyproject.toml  requirements.txt  setup.py
check_builds/check_builds/: check_builds.ini.example  version.py
check_builds/check_builds/conf/: pkg_data.json
check_builds/check_builds/scripts/: check_builds_prog.py  util.py
check_builds/conf/: pkg_data.json
check_builds/jenkins/: run_missing_builds_check.sh
check_builds/src/check_builds/: __init__.py  check_builds_prog.py
confluence/: confluence-backup.py
couchbase-release/: .dockerignore  build.sh  build_deb.sh  build_rpm.sh  go.sh
couchbase-tableau-connector/: tableau-connector-build.sh
dockerhub/: cb-docker-tool
escrow/: .dockerignore  Dockerfile  build_escrow.sh  entrypoint.sh  escrow_config  go.sh  patches.sh  prep_deposit.sh
generate_commit_counts/: gen-commit-counts.py  projects.ini
generate_private_repos/: README  gen-private-repos.py  projects.ini  setup.py
gerrit-tools/: patch_via_gerrit.ini.example  requirements.txt  setup.py
git-tools/: find_missing_commits.py
jira-oauth-token/: README  jira-oauth-token.py  jira.config  requirements.txt
k8s-microservice/: README.md
license-injector/: README.md  app.js
manifest-tools/: .dockerignore  Dockerfile  entrypoint.sh  go.sh  recreate-build-manifests.py  requirements.txt  setup.py
mobile/: cbl-docs-publish.sh  mobile-release-binaries-to-s3.sh
mobile-release/: mobile-release-binaries-to-s3.sh
py-wrapper/: CMakeLists.txt  README.md  py-wrapper.c
python-wrappers/: .gitignore  README.md  build-wrappers.sh
qualys/: README.md  qualys_install.sh  qualys_scan.sh  requirements.txt  was_scan.py
release/: Pipfile  add_to_released.py
repo_manage/: README.md
repo_upload/: requirements.txt  setup.py
repo_windows_wrapper/: README.md  build.cmd  build.sh  main.go
restriction/: .gitignore  README.md  convert_analytics_branch.sh  jira_util.py  pyproject.toml  restricted-branch-check  restricted.html.tmpl  restricted_branch_check.py  restricted_manifest_check.py  test_restricted.py
s3-tools/: add_md5_metadata.py
toys/: README
utilities/: annot_from_manifest  clean_git_clone  lock-to-sha.py  patch_via_gerrit  shell-utils-bash-only.sh  shell-utils.sh  sync_historic_manifest
utilities/lock-to-sha/: README.md  lock_to_sha.py  pyproject.toml
xshell/: README.md  download_blackduck_notice  download_blackduck_notice.bat  download_blackduck_notice.ps1  download_build_source  download_build_source.bat  download_build_source.ps1
(+622 files in other folders)
