[project]
name = "restriction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
license = { text = "Apache license" }
dependencies = [
    "jira>=3.8.0",
    "importmonkey>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
restricted-branch-check = "restricted_branch_check:main"
restricted-manifest-check = "restricted_manifest_check:main"
test-restricted = "test_restricted:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
