[project]
name = "blackduck-scripts"
version = "0.1.0"
description = "Various utility scripts for Black Duck"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
# The Blackduck lib doesn't like Python 3.12+ yet
requires-python = ">=3.11, <3.12"
dependencies = [
    "blackduck",
    "PyYAML"
]
