[project]
name = "lock-to-sha"
version = "0.1.0"
description = "Utility to create a locked repo manifest"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
license = { text = "Apache license" }
dependencies = [
    "lxml>=5"
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
lock-to-sha = "lock_to_sha:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
