[project]
name = "detect-scan"
version = "0.1.0"
description = "Runs a Black Duck Detect scan process"
authors = [
    { name = "Couchbase Build Team", email = "build-team@couchbase.com" }
]
# The Blackduck lib doesn't like Python 3.12+ yet
requires-python = ">=3.11, <3.12"
dependencies = [
    "blackduck",
    "dictdiffer===0.9.0",
    "PyYAML"
]
