[project]
name = "verify-black-duck-manifest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chris Hillery", email = "ceej@couchbase.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
verify-black-duck-manifest = "verify_black_duck_manifest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
